--- a/package.json
+++ b/package.json
@@ -1,45 +1,44 @@
 {
-  "name": "metal-tooltip",
-  "version": "2.0.3",
-  "description": "Metal's tooltip component",
-  "license": "BSD",
-  "repository": "metal/metal-tooltip",
-  "author": {
-    "name": "Ygor Costa",
-    "email": "ygor.costa@liferay.com"
-  },
-  "engines": {
-    "node": ">=0.12.0",
-    "npm": ">=3.0.0"
-  },
-  "jsnext:main": "src/Tooltip.js",
-  "main": "lib/Tooltip.js",
-  "files": [
-    "lib",
-    "src",
-    "test"
-  ],
-  "scripts": {
-    "compile": "babel --presets metal -d lib/ src/",
-    "prepublish": "gulp soy && npm run compile",
-    "test": "gulp test"
-  },
-  "keywords": [
-    "metal",
-    "tooltip"
-  ],    
-  "devDependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-preset-metal": "^4.0.0",
-    "gulp": "^3.8.11",
-    "gulp-metal": "^1.9.14",
-    "metal": "^2.0.0",
-    "metal-component": "^2.0.0",
-    "metal-dom": "^2.0.0",
-    "metal-events": "^2.0.0",
-    "metal-position": "^2.0.0",
-    "metal-soy": "^2.0.0",
-    "metal-tooltip": "^2.0.0",
-    "marble": "^2.10.0"
-  }
+	"name": "metal-marble-tooltip",
+	"version": "0.0.0",
+	"description": "Marble's metal tooltip component",
+	"license": "BSD",
+	"repository": "ygorcosta/metal-marble-tooltip",
+	"author": {
+		"name": "Ygor Costa",
+		"email": "ygor.costa@liferay.com"
+	},
+	"engines": {
+		"node": ">=0.12.0",
+		"npm": ">=3.0.0"
+	},
+	"jsnext:main": "src/MarbleTooltip.js",
+	"main": "lib/MarbleTooltip.js",
+	"files": [
+		"lib",
+		"src"
+	],
+	"scripts": {
+		"compile": "babel --presets metal -d lib/ src/",
+		"prepublish": "gulp soy && npm run compile"
+	},
+	"keywords": [
+		"marble",
+		"metal",
+		"tooltip"
+	],    
+	"devDependencies": {
+		"babel-cli": "^6.4.5",
+		"babel-preset-metal": "^4.0.0",
+		"gulp": "^3.8.11",
+		"gulp-metal": "^1.9.14",
+		"metal": "^2.0.0",
+		"metal-component": "^2.0.0",
+		"metal-dom": "^2.0.0",
+		"metal-events": "^2.0.0",
+		"metal-position": "^2.0.0",
+		"metal-soy": "^2.0.0",
+		"metal-tooltip": "^2.0.0",
+		"marble": "^2.10.0"
+	}
 }
